# AvatarAgentCore

./: .gitignore  LICENSE  README.md
AvatarGraphAgent/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
AvatarGraphAgent/app/: chat.py  graph.py  main.py  state.py  system_path.py
AvatarGraphAgent/app/api/v1/: api_body.py  router.py  server.py
AvatarGraphAgent/app/core/: env_config.py  system_path.py  utility.py
AvatarGraphAgent/app/data/: avatar_memory.db
AvatarGraphAgent/app/graph/builder/: host_builder.py
AvatarGraphAgent/app/graph/edges/: should_continue_conditional_edge.py  should_continue_edge.py  should_reflection_edge.py
AvatarGraphAgent/app/graph/nodes/: agent_node.py  reflection_node.py
AvatarGraphAgent/app/mcp/: mcp_conf.json  mcp_manager.py
AvatarGraphAgent/app/prompt/: system_prompt.py
AvatarGraphAgent/app/prompts/system/: handler.py
AvatarGraphAgent/app/system/: handler.py
AvatarGraphAgent/app/tools/: file_tool.py  tools_utility.py
AvatarGraphAgent/app/ui/: cli.py
AvatarGraphAgent/data/: avatar_memory.db-shm  avatar_memory.db-wal
