[project]
name = "avatargraphagent"
version = "0.1.0"
description = "Core engine for Local AI Avatars using LangGraph and Ollama"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.2.24",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.1.4",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "mcp>=1.27.0",
    "python-dotenv>=1.2.2",
]
